--- a/style.css
+++ b/style.css
@@ -32,9 +32,7 @@ nav{
 nav ul li{
     display:inline-block;
     list-style: none;
-    margin:10px 10px 10px;
-    
-}
+    margin:10px 10px 10px;}
 nav ul li a{
     color: #fff;
     text-decoration: none;
@@ -71,7 +69,7 @@ nav ul li a:hover::after{
 /*-- aboutme --*/
 #about{
     padding: 80px 0;
-    color: #ababab;
+    color: white;
 }
 .row{
     display: flex;
@@ -81,8 +79,54 @@ nav ul li a:hover::after{
 .about-col-1{
     flex-basis: 35% ;
 }
-.about-col-2 img{
+.about-col-1 img{
     width: 100%;
     border-radius:15px;
 }
+.about-col-2 {
+    flex-basis: 60%;
+}
+.sub-title{
+    font-size: 60px;
+    font-weight: 600;
+    color: #fff;
+}
+.tab-titles{
+    display: flex;
+    margin: 20px 0 40px;
 
+}
+.tab-links{
+    margin-right: 50px;
+    font-size: 15px;
+    font-weight: pointer;
+    position: relative;
+}
+.tab-links::after{
+content: '';
+width: 0;
+height: 3px;
+background: #ff00ff;
+position: absolute;
+left: 0;
+bottom: -8px;
+transition: 0.5px;
+}
+.tab-links.active-link::after{
+    width: 50%;
+}
+.tab-content ul li{
+    list-style: none;
+    margin:10px 0;
+}
+.tab-content ul li span{
+    color: #b547b5;
+    font-size: 14px;
+
+}
+.tab-content{
+    display: none;
+}
+.tab-content.active-tab{
+    display: block;
+}
