--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ transition: 0.5px;
 }
 .layer{
     width: 100%;
-    height: 100%;
+    height: 0;
     background: linear-gradient(rgba(0,0,0,0.6),#ff004f);
     border-radius: 10px;
     position: absolute;
@@ -235,6 +235,20 @@ transition: 0.5px;
 .work:hover img {
     transform: scale(1.1);
 }
-.work:hover layer{
+.work:hover .layer{
     height: 100%;
 }
+.btn{
+    display: block;
+    margin: 50px auto;
+    width: fit-content;
+    border: 1px solid #ff004f;
+    padding: 14px 50px;
+    border-radius: 10px ;
+    text-decoration:none ;
+    transition: background ;
+}
+.btn:hover{
+    background: #ff004f;
+}
+
