--- a/style.css
+++ b/style.css
@@ -310,3 +310,14 @@ form input, form textarea{
 .copyright i{
     color: #ff004f;
 }
+/*------------css for small screen------------------*/
+@media only screen  and (max-width:600px) {
+    #header{
+        background-image: url(images/phone-background.png);
+    }
+    .header-text{
+        margin-top: 100%;
+        font-size: 16px;
+    }
+    
+}
